<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp"
        style="?android:attr/buttonBarStyle">

        <TextView
            android:id="@+id/textWidgetTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textWidgetTitulo"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:layout_marginBottom="26dp" />

        <TextView
            android:id="@+id/textWidgetExplanation1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textWelcomeSubtitle"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:lineSpacingExtra="2dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/textWidgetExplanation2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textWidgetExplanation2"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:lineSpacingExtra="2dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/textWidgetExplanation3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textWidgetExplanation3"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:lineSpacingExtra="2dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/textWidgetExplanation4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textWidgetExplanation4"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:lineSpacingExtra="2dp"
            android:layout_marginBottom="30dp"/>

        <Button
            android:id="@+id/buttonCerrarWidgetInstall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonCerrarWidgetInstall"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/button_text_blue"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>
</ScrollView>